former2/temp-vpc.yml
# cloudformationテンプレートのバージョンを示す
AWSTemplateFormatVersion: "2010-09-09"

# テンプレートの概要
Description: vpc construction template

Parameters:
  DBengineVersion:
    Type: String
  MasterUsPw:
    Type: String


# キーと値のマッピングを作成。VPCやサブネットのCIDRブロックを定義
Mappings:
  StackConfig:
    VPC:
      CIDR: 10.1.0.0/16
    PublicSubnet1:
      CIDR: 10.1.0.0/24
    PublicSubnet2:
      CIDR: 10.1.1.0/24
    PrivateSubnet1:
      CIDR: 10.1.2.0/24
    PrivateSubnet2:
      CIDR: 10.1.3.0/24

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !FindInMap [StackConfig, VPC, CIDR]
      EnableDnsSupport: true # DNSサポートを有効化
      EnableDnsHostnames: true # DNSホスト名を有効化
      Tags:
        - Key: Name
          Value: my-vpc # VPCに名前タグを付ける

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: vpc-igw

# VPCゲートウェイアタッチメント。上のVPCとIGWを接続
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC # 作成したVPCへの参照
      InternetGatewayId: !Ref InternetGateway # 作成したIGWへの参照

# パブリック
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    DependsOn: AttachGateway # IGWがVPCにアタッチされた後に作成
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: public-route-table

  PublicRoute:
    Type: AWS::EC2::Route # 公開ルートのリソースを定義
    DependsOn: AttachGateway 
    Properties:
      RouteTableId: !Ref PublicRouteTable # このルートが追加されるルートテーブルのIDを指定
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway # このルートのターゲットとなるIGWを指定

  PublicSubnet1:
    Type: AWS::EC2::Subnet # 公開サブネットのリソースを定義
    DependsOn: AttachGateway # IGWがVPCにアタッチされた後に作成
    Properties:
      AvailabilityZone: "ap-northeast-1a"
      VpcId: !Ref VPC # このサブネットが関連付けられるVPCのIDを指定
      CidrBlock: !FindInMap [StackConfig, PublicSubnet1, CIDR]
      Tags:
        - Key: Name
          Value: Public Subnet a

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation # サブネットとルートテーブルの関連付けを定義
    Properties:
      SubnetId: !Ref PublicSubnet1 # 関連付けられるサブネットのIDを指定
      RouteTableId: !Ref PublicRouteTable # 関連付けられるルートテーブルのIDを指定

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    DependsOn: AttachGateway
    Properties:
      AvailabilityZone: "ap-northeast-1c"
      VpcId: !Ref VPC
      CidrBlock: !FindInMap [StackConfig, PublicSubnet2, CIDR]
      Tags:
        - Key: Name
          Value: Public Subnet c

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable

# プライベート
  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: private-route-table

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: "ap-northeast-1a"
      VpcId: !Ref VPC
      CidrBlock: !FindInMap [StackConfig, PrivateSubnet1, CIDR]
      Tags:
        - Key: Name
          Value: Private Subnet a

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: "ap-northeast-1c"
      VpcId: !Ref VPC
      CidrBlock: !FindInMap [StackConfig, PrivateSubnet2, CIDR]
      Tags:
        - Key: Name
          Value: Private Subnet c

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable

  PublicSecurityGroup:
    Type: AWS::EC2::SecurityGroup # 公開セキュリティグループのリソースを定義
    Properties:
      GroupDescription: Allow SSH snd HTTP and HTTPS # グループの説明を設定
      VpcId: !Ref VPC # このセキュリティグループが関連付けられるVPCのIDを指定
      SecurityGroupIngress: # セキュリティグループのインバウンドルールを定義
        - IpProtocol: tcp # プロトコルを指定。ここではTCPを指定
          FromPort: 22 # 開始ポート番号を指定ここでは22（SSH）を指定
          ToPort: 22 # 終了ポート番号を指定。ここでは22（SSH）を指定
          CidrIp: 0.0.0.0/0 # 許可する送信元CIDR IPアドレス範囲を指定。ここでは全てのIPアドレスを意味する
        - IpProtocol: tcp
          FromPort: 80 # HTTP（80）を許可
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443 # HTTPS（443）を許可
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 3000 # ポート3000を許可
          ToPort: 3000
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: public-sg # 名前

# RDS
  RDSSecurityGroup:
    Type: AWS::EC2::SecurityGroup 
    Properties:
      GroupDescription: Allow My SQL from ECS only
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp 
          FromPort: 3306 #MySQLの接続ポート番号を許可
          ToPort: 3306
          SourceSecurityGroupId: !Ref ECSSecurityGroup # ECS のセキュリティグループを指定
      Tags:
        - Key: Name
          Value: rds-sg

  RDSSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupName: pf-rds-subnet
      DBSubnetGroupDescription: pf rds subnet
      SubnetIds:
        - !Ref PrivateSubnet1 #プライベートサブネットを参照
        - !Ref PrivateSubnet2
      Tags:
        - Key: Name
          Value: rds-subnet

  #RDSインスタンス作成
  RDSInstance:
    Type: AWS::RDS::DBInstance
    Properties:
      #KmsKeyId: !ImportValue ut-KMS-Arn
      #StorageType: gp2
      AllocatedStorage: 20 #コストを考慮して最小値を入力
      DBInstanceClass: db.t3.micro #インスタンスクラスのt2は2024.5月までに廃止
      DBInstanceIdentifier: rdspf
      Engine: mysql
      EngineVersion: !Sub ${DBengineVersion} #使用するDBエンジンのバージョン指定。
      MasterUsername: admin
      MasterUserPassword: !Sub ${MasterUsPw}
      DBName: rdspf
      BackupRetentionPeriod: 0 #自動バックアップの有無。今回は無効化
      MultiAZ: false #無料枠のためマルチAZをfalse
      PubliclyAccessible: false
      StorageEncrypted: true #暗号化を有効に
      CopyTagsToSnapshot: false #DBインスタンスやクラスターに付けられたタグが自動的にDBスナップショットにコピーされる。今回は無効化
      DeleteAutomatedBackups: true #RDS削除に生成されるスナップショットの自動削除を有効化
      DBSubnetGroupName: !Ref RDSSubnetGroup
      VPCSecurityGroups: 
      - !Ref RDSSecurityGroup
      Tags: 
        - Key: "Name"
          Value: "rdspf"
